--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ a, span {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
-    color: #F08CAE;
+    color: #ffd90f;
 }
 
 ul {
