--- a/css/home.css
+++ b/css/home.css
@@ -116,7 +116,7 @@ h3 a:hover {
 
 .email-button {
     border: 1px solid #F08CAE;
-    background-color: #F08CAE;
+    background-color: #ffd90f;
 }
 
 .cta:hover {
