--- a/css/home.css
+++ b/css/home.css
@@ -116,7 +116,7 @@ h3 a:hover {
 
 .email-button {
     border: 1px solid #ffd90f;
-    background-color: #ffd90f;
+    background-color: #dcdcdc;
 }
 
 .cta:hover {
