--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@ h4, h5 {
 .profile-container {
     margin-top: 25px;
     display: flex;
-    flex-direction: column;
+    /*-- flex-direction: column; --- */
     align-items: center;
 }
 
