--- a/css/about.css
+++ b/css/about.css
@@ -11,6 +11,7 @@ h4, h5 {
 
 .profile-container {
     margin-top: 25px;
+    margin-left: 5px;
     display: flex;
     /*-- flex-direction: column; --- */
     align-items: center;
@@ -29,7 +30,7 @@ h4, h5 {
 }
 
 .terminal-container {
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
     margin-top: 25px;
 }
