--- a/css/about.css
+++ b/css/about.css
@@ -20,6 +20,7 @@ h4, h5 {
 .me-icon-container {
     width: 200px;
     height: auto;
+    margin-left: 5px;
     object-fit: contain;
     text-align: center;
 }
