--- a/css/about.css
+++ b/css/about.css
@@ -18,6 +18,7 @@ h4, h5 {
 }
 
 .me-icon-container {
+    margin-top: 25px;
     width: 200px;
     height: auto;
     margin-right: 5px;
@@ -138,7 +139,7 @@ h4, h5 {
     margin-top: 10px;
 }
 
-/* --- TECH STACK --- */
+/* --- TECH STACK 
 
 .tech-stack-container {
     margin: 50px auto 0 auto;
@@ -164,6 +165,7 @@ h4, h5 {
     margin-left: 10px;
 }
 
+--- */
 /* --- ALL SOCIAL MEDIA --- */
 
 .social-media-list {
