--- a/css/home.css
+++ b/css/home.css
@@ -120,8 +120,8 @@ h3 a:hover {
 }
 
 .cta:hover {
-    border: 1px solid #7EB77F;
-    background-color: #7EB77F;
+    border: 1px solid #dcdcdc;
+    background-color: #dcdcdc;
     padding: 10px 20px;
 }
 
