--- a/css/home.css
+++ b/css/home.css
@@ -115,7 +115,7 @@ h3 a:hover {
 }
 
 .email-button {
-    border: 1px solid #ffd90f;
+    border: 1px solid #dcdcdc;
     background-color: #dcdcdc;
 }
 
