--- a/css/about.css
+++ b/css/about.css
@@ -11,26 +11,21 @@ h4, h5 {
 
 .profile-container {
     margin-top: 25px;
-    margin-left: 5px;
     display: flex;
-    /*-- flex-direction: column; --- */
+    flex-direction: column;
     align-items: center;
 }
 
 .me-icon-container {
-    margin-top: 0px;
     width: 200px;
     height: auto;
-    margin-right: 5px;
     object-fit: contain;
     text-align: center;
 }
 
 .me-icon {
-    margin-top: 0px;
     height: 100%;
     width: 100%;
-    margin-right: 5px;
 }
 
 .terminal-container {
@@ -108,7 +103,6 @@ h4, h5 {
 
 #experience {
     margin-top: 50px;
-
 }
 
 .education-experience-card {
@@ -141,7 +135,7 @@ h4, h5 {
     margin-top: 10px;
 }
 
-  
+/* --- TECH STACK --- */
 
 .tech-stack-container {
     margin: 50px auto 0 auto;
@@ -166,7 +160,6 @@ h4, h5 {
 .skill span {
     margin-left: 10px;
 }
-
 
 /* --- ALL SOCIAL MEDIA --- */
 
