--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,21 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
     font-family: 'Nunito', sans-serif;
     font-size: 16px;
     font-weight: 400;
     color: #FFFFFF;
     scroll-behavior: smooth;
 }
+
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
 body {
     background-color: #1D263B;
