--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    
+    box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
     font-size: 16px;
     font-weight: 400;
